# ucsc-genome-mcp

./: README.md  claude_desktop_config_example.py  pyproject.toml
